# langchain_explore

./: .env  .gitignore  README.md  data_ingestion.ipynb  main.py  pyproject.toml  text_splitting.ipynb
