[project]
name = "langchain-explore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "bs4>=0.0.2",
    "chromadb>=0.6.3",
    "fitz>=0.0.1.dev2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.11",
    "langchain-text-splitters>=0.3.7",
    "pymupdf>=1.25.4",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "wikipedia>=1.4.0",
]
